--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <p>
             S láskou vyrobili studenti STC: Petr Kureča, Jan Bednář, Jiří Oberdörfer, Hynek Chovan
         </p>
-        <p>A nebojte snad přibude i nějakej tuning STC zpěvníčku. Kdybys měl zájem nám pomoci, napiš na <a href="mailto:petr.kucer@studentstc.cz">petr.kucera@studentstc.cz</a>.</p>
+        <p>A nebojte snad přibude i nějakej tuning STC zpěvníčku. Kdybys měl zájem nám pomoci, napiš na <a href="mailto:petr.kucera@studentstc.cz">petr.kucera@studentstc.cz</a>.</p>
 
         </section>
     </article>
